fix menu wrapping and spacing with new items

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
-@use "../../styles/partials/variables.scss" as *;
-@use "../../styles/partials/mixins.scss" as *;
+@use '../../styles/partials/variables.scss' as *;
+@use '../../styles/partials/mixins.scss' as *;
 
 .footer {
   @include site-margins;
@@ -11,31 +11,16 @@
   gap: 1rem;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  @include desktop {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    flex-direction: row;
-    gap: 0;
-  }
   &__logo {
     height: 7.5rem;
     order: 0;
   }
   &__element {
-    @include desktop {
-      width: 30rem;
-    }
     &--nav {
       order: 2;
-      @include desktop {
-        order: 0;
-      }
     }
     &--social {
       order: 1;
-      @include desktop {
-        order: 0;
-      }
     }
   }
 }
